--- a/style.css
+++ b/style.css
@@ -2,3 +2,13 @@ h1{
     color:red;
     background-color: black;
 }
+
+p{
+    color:red;
+    background-color: grey;
+}
+
+button{
+    color: gold;
+    background-color: cornsilk;
+}
