--- a/style2.css
+++ b/style2.css
@@ -3,12 +3,14 @@ h1{
     border: solid;
     width: 50%;
     text-decoration: red underline;
+    letter-spacing: 15px;
 }
 
 p{
     text-align: start;
     font-weight: 400;
     text-decoration: overline;
+    line-height: 2.5;
 }
 
 h2{
