--- a/style10.css
+++ b/style10.css
@@ -31,3 +31,12 @@ p a{
 nav ul li a{
     color: red;
 }
+
+p + h3{
+    text-decoration: underline;
+}
+
+.upvote + button{
+    background-color: lightblue;
+    color: darkblue
+}
