--- a/style10.css
+++ b/style10.css
@@ -44,3 +44,16 @@ p + h3{
 div > input{
     background-color: darksalmon;
 }
+
+input[type="text"]{
+color: red;
+}
+
+input[type="password"]
+{
+    color: green;
+}
+
+input[type]{
+    background-color: ghostwhite;
+}
