--- a/style10.css
+++ b/style10.css
@@ -57,3 +57,35 @@ input[type="password"]
 input[type]{
     background-color: ghostwhite;
 }
+
+#myId p{
+    color: green;
+}
+
+button:hover{
+    background-color: black;
+    color: white;
+}
+
+h3:hover{
+    text-decoration: overline;
+}
+
+button:active{
+    background-color: darkslateblue;
+    color: black;
+}
+
+p:active{
+    font-weight: bold;
+    color: green;
+}
+
+input[type="radio"]:checked + label{
+    color: red;
+    font-weight: bold;
+}
+
+.post:nth-of-type(2n){
+    background-color: blanchedalmond;
+}
