--- a/style10.css
+++ b/style10.css
@@ -89,3 +89,15 @@ input[type="radio"]:checked + label{
 .post:nth-of-type(2n){
     background-color: blanchedalmond;
 }
+
+h1::first-letter{
+    color: black;
+}
+
+p::first-line{
+    color: red;
+}
+
+p::selection{
+    background-color: yellowgreen;
+}
