--- a/style0.css
+++ b/style0.css
@@ -2,6 +2,18 @@ div{
     height: 200px;
     width: 500px;
     background-color: pink;
+   /* border-width: 5px;
+    border-style: solid;
+    border-color: blue; */
+    border: 5px solid blue;
+    border-left-color: black;
+    border-left-style: dashed;
+    border-top: 5px dashed yellow;
 }
 
+h1{
+    border-width: 2px;
+    border-style: dashed;
+    border-color: green;
+}
 
