--- a/style0.css
+++ b/style0.css
@@ -11,12 +11,23 @@ div{
     border-top: 5px dashed yellow;
     border-radius: 5px;
     border-top-right-radius: 10px;
+    padding-top: 50px;
+    padding-left: 20px;
+    padding-bottom: 50px;
 }
 
 h1{
     border-width: 2px;
     border-style: dashed;
     border-color: green;
-    border-radius: 100%;
+    border-radius: 2px;
+}
+
+button{
+    border: 2px solid black;
+    border-radius: 10px;
+    padding-left: 25px;
+    padding-right: 25px;
+    background-color: yellow;
 }
 
