--- a/style0.css
+++ b/style0.css
@@ -14,6 +14,7 @@ div{
     padding-top: 50px;
     padding-left: 20px;
     padding-bottom: 50px;
+    margin: 20px 50px;
 }
 
 h1{
@@ -21,6 +22,7 @@ h1{
     border-style: dashed;
     border-color: green;
     border-radius: 2px;
+    margin:0;
 }
 
 button{
