--- a/styleindex1.css
+++ b/styleindex1.css
@@ -1,7 +1,12 @@
-span{
-    background-color: pink;
-    color: white;
+div{
+    height: 200px;
+    width: 200px;
+    background-color: greenyellow;
     border: 2px solid black;
-    text-transform: uppercase;
-    padding: 50px;
+    margin: 5px;
+    display: inline-block;
+}
+
+#third{
+    display: none;
 }
