--- a/styleindex1.css
+++ b/styleindex1.css
@@ -1,19 +1,27 @@
-
-h1{
-    border: 2px solid black;
-    width: 33.33%;
-}
-
 #outer{
-    height: 100px;
-    width: 100px;
-    background-color: lightblue;
-    margin: 50px;
+    height: 400px;
+    width: 200px;
+    border: 2px solid black;
+    background-color: pink;
+    font-size: 20px;
 }
 
 #inner{
-    height: 40px;
-    width: 40px;
-    background-color: blue;
-    margin-left: 10%;
+    height: 100px;
+    width: 100px;
+    background-color: cornflowerblue;
+    font-size: 1.5em;
+    padding: 1em;
+}
+
+button{
+    font-size: 50px;
+    border-radius: 15px;
+    border: 5px solid green;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+div{
+    font-size: 2rem;
 }
