--- a/styleparc0.css
+++ b/styleparc0.css
@@ -6,3 +6,10 @@
     margin: 20px 1em 40 2em;
     padding: 1em;
 }
+
+.box{
+    height: 100px;
+    width: 100px;
+    border: 2px solid black;
+    
+}
