--- a/styleparc0.css
+++ b/styleparc0.css
@@ -11,5 +11,7 @@
     height: 100px;
     width: 100px;
     border: 2px solid black;
-    
+    background-color: pink;
+    border-radius: 50%;
+    display: inline-block;
 }
