--- a/css3.css
+++ b/css3.css
@@ -1,10 +1,17 @@
 div{
-    height: 200px;
-    width: 200px;
+    height: 100px;
+    width: 100px;
     background-color: rgba(255,0,0,0.5);
+    /*transition-duration: 1s;
+    transition-delay: 1s; */
+    margin: 0 auto;
+    margin-top: 10px;
+    transition: margin-top 2s ease-in-out 0.2s;
 }
 
-#opacity{
-    background-color: yellow;
-    opacity: 0.5;
+div:hover{
+    /*background-color: black;
+    border-radius: 50%; */
+    margin-top: 400px;
+    background-color: pink;
 }
